clean-up of comments in index.html

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <p>Mon - Fri 9 a.m. - 5 p.m. (EST)</p>
                     <p>855.967.3787</p>
                     <p>International +1.617.963.0555</p>
-                </div>
-            </div>
-        </div>
+                </div> <!-- #hoursNumbers section ends -->
+            </div><!-- #phoneNumber section ends -->
+        </div><!-- #contactLine section ends -->
         <div id="info">
             <h4 class="blue">Clients and Servers</h4>
             <p>Computers connected to the <span class="aqua">Web</span> are called <span class="bold">clients</span> and <span class="bold">servers</span>.</p>
@@ -63,13 +63,9 @@
                     <h4>The Big 3 - HTML, CSS, JavaScript</h4>
                     <p>While the sever can process information in many different languages, the files that they serve to the client are always going to be some combination of HTML, CSS, and JavaScript!</p>
                     <p>Learn more about the Big 3 <a class="aqua" href="">here</a>!</p>
-                </div> <!-- #bigThreeInfo ends -->
+                </div> <!-- #bigThreeInfo section ends -->
             </div> <!-- #bigThree section ends -->
         </div> <!--#info section ends-->
-    </div>
-
-
-
-
+    </div><!-- #mainContent section ends -->
 </body>
 </html>
